--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/devtools": "^6.0.27",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-drawer-layout": "^3.3.2",
+    "react-native-error-boundary": "^1.2.4",
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-pager-view": "^6.4.1",
+    "react-native-reanimated": "^3.15.3",
+    "react-native-root-siblings": "^5.0.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0"
   },
