--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
+    "native-base": "^3.4.28",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-drawer-layout": "^3.3.2",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-error-boundary": "^1.2.4",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-pager-view": "^6.4.1",
